fix(notification): show on mobile version

--- a/src/app/shared/layouts/main-layout/main-layout.component.scss
+++ b/src/app/shared/layouts/main-layout/main-layout.component.scss
@@ -482,6 +482,10 @@ $mobile-header-height: 64px;
   top: 0;
   z-index: 100;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.03);
+
+  @media (max-width: 768px) {
+    display: none;
+  }
 }
 
 .header-search {
